Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -338,7 +338,7 @@
     "credit": "Haber",
     "crm": "CRM",
     "cron-job": "Tarea programada",
-    "cron-timeout": "Časový limit cronu byl dosažen, pro překročení maximálního běhového limitu PHP byl zastaven. Pro vyhnutí se této limitaci spusťte cron z terminálu.",
+    "cron-timeout": "Časový limit cronu byl dosažen, aby nedošlo k překročení maximálního běhového limitu PHP. Pro vyhnutí se této limitaci spusťte cron z terminálu.",
     "crons": "Stroje",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
@@ -1338,7 +1338,7 @@
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Cant. seleccionada",
-    "selector-number": "Selektor",
+    "selector-number": "Vyberák",
     "send": "Enviar",
     "send-anonymous-data": "Odeslat anonymní data",
     "send-audios": "Odeslat zvuky",
