--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -901,7 +901,7 @@
     "login-text": "Anmeldung",
     "login-to-continue": "Melden Sie sich an, um fortzufahren",
     "login-to-continue-p": "Um fortzufahren, müssen Sie sich identifizieren. Klicken Sie auf Anmelden oder erstellen Sie ein Konto.",
-    "login-user-not-found": "Benutzer nicht gefunden",
+    "login-user-not-found": "Benutzer nicht gefunden: %nick%",
     "logo": "Logotyp",
     "logout": "Ausloggen",
     "logout-ok": "Abmelden erfolgreich",
@@ -915,7 +915,7 @@
     "machine": "Maschine",
     "machines": "Maschinen",
     "macro-account-note-info": "Schlüssel zur Werteersetzung im Makro",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Fehler beim Herstellen der Verbindung zum Mailserver",
     "mail-test-error": "E-Mail-Testfehler",
     "mail-test-ok": "Erfolgreicher E-Mail-Test",
     "mailer": "Mail-Controller",
@@ -986,7 +986,7 @@
     "months": "Monate",
     "more": "Mehr",
     "more-fields": "mehr Felder",
-    "more-plugins": "more-plugins",
+    "more-plugins": "Weitere Plugins...",
     "move-lines": "Zeilen verschieben",
     "movements": "Bewegungen",
     "my-profile": "Mein Profil",
@@ -1003,7 +1003,7 @@
     "new-acc-entry-line-p": "Sie können eine Zeile eingeben, indem Sie den Unterkontencode eingeben oder auf die Unterkonten-Schaltfläche klicken und ein Unterkonto auswählen.",
     "new-address": "Neue Adresse",
     "new-customer": "neuer Kunde",
-    "new-customers": "new-customers",
+    "new-customers": "Neue Kunden",
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
     "new-password": "neues Passwort",
     "new-price": "Neuer Preis",
@@ -1031,13 +1031,13 @@
     "not-allowed-delete": "not-allowed-delete",
     "not-allowed-modify": "Sie haben keine Berechtigung zum Ändern",
     "not-enough-stock": "Nicht genügend Lagerbestand von %reference%",
-    "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
     "not-public": "Nicht öffentlich",
     "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "Ungültige Steuernummer% type% %number%",
-    "not-valid-image": "No es una imagen válida",
-    "not-valid-percentage-retention": "Not valid percentage retention",
+    "not-valid-image": "Keine gültige Bilddatei",
+    "not-valid-percentage-retention": "Ungültiger Prozentsatz. Muss größer als 0,00 sein",
     "note": "Notiz",
     "notes": "Anmerkungen",
     "notice": "Aviso",
@@ -1086,7 +1086,7 @@
     "others-filters": "Sonstige Filter",
     "out-of-stock": "nicht vorrätig",
     "page": "Seite",
-    "page-break": "Salto de página",
+    "page-break": "Seitenumbruch",
     "page-configuration": "Seiteneinstellung",
     "page-not-found": "Seite nicht gefunden",
     "page-not-found-p": "Die gesuchte Seite wurde nicht gefunden.",
@@ -1120,7 +1120,7 @@
     "payments": "Zahlungen",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
-    "pct-surcharge": "Surcharge rate",
+    "pct-surcharge": "% Zuschlag",
     "pct-tax": "% impuestos",
     "pct-vat": "VAT rate",
     "pending": "Offen",
@@ -1160,10 +1160,10 @@
     "plugin-order": "Orden: %num%",
     "plugin-phpversion-error": "Das Plugin %pluginName% erfordert PHP %php% oder höher",
     "plugin-removal-disabled": "Plugin-Entfernung ist auf diesem Server deaktiviert",
-    "plugin-unsupported-version": "plugin-unsupported-version",
+    "plugin-unsupported-version": "Das Plugin %pluginName% ist für FacturaScripts 2017 oder älter, aber Sie verwenden FacturaScripts %version%",
     "plugin-update": "Aktualliesierung des Plugins %pluginName% auf Version %version%",
     "plugins": "Plugins",
-    "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
+    "plugins-p": "Plugins ermöglichen das Hinzufügen neuer Funktionen. Aktiviere die, die du jetzt benötigst, oder mache es später im Administratormenü.",
     "points": "Punkte",
     "points-of-interest": "Puntos de interés",
     "port": "Puerto",
@@ -1196,7 +1196,7 @@
     "printing-formats": "Druckformate",
     "priority": "Priorität",
     "private": "Privat",
-    "private-key": "Clave privada",
+    "private-key": "Privater Schlüssel",
     "process": "Proceso",
     "processing": "Verarbeitung",
     "product": "Produkt",
@@ -1205,7 +1205,7 @@
     "profile": "Profil",
     "profit-and-loss": "Gewinn und Verlust",
     "profit-and-loss-balance": "Gewinn- und Verlustrechnung",
-    "profits": "Beneficios",
+    "profits": "Gewinne",
     "project": "Proyekt",
     "projects": "Proyekte",
     "provider-reference": "Anbieterreferenz",
@@ -1263,7 +1263,7 @@
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
     "register-install-ad": "Die Installation von FacturaScripts registrieren",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Wenn du die Installation von FacturaScripts registrierst, erhältst du 1 Monat PRO-Sponsoring, mit dem du eines unserer exklusiven Plugins herunterladen kannst. Außerdem hilft es uns, Statistiken über Core- und PHP-Versionen zu erhalten.",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
     "register-symbol": "#",
@@ -1370,7 +1370,7 @@
     "services": "services",
     "settings": "Einstellungen",
     "settlement": "Abwicklung",
-    "settlement-product": "settlement-product",
+    "settlement-product": "Abrechnungsprodukt",
     "settlements": "Abrechnungen",
     "setup-options": "Einrichtungsoptionen",
     "shipping": "Versand",
@@ -1517,14 +1517,14 @@
     "texts": "Texte",
     "third-quarter": "Drittes Quartal",
     "third-trimester": "Drittes Trimester",
-    "this-last-fortnight": "this-last-fortnight",
+    "this-last-fortnight": "Die letzten 15 Tage",
     "this-last-month": "diesen letzten Monat",
     "this-last-week": "this-last-week",
     "this-last-year": "das letzte Jahr",
     "this-month": "this-month",
     "this-week": "this-week",
     "this-year": "dieses Jahr",
-    "thousands-separator": "Tausende",
+    "thousands-separator": "Tausendertrennzeichen",
     "thursday": "Donnerstag",
     "ticket": "Ticket",
     "tickets": "Tickets",
@@ -1551,7 +1551,7 @@
     "town": "Stadt, Dorf",
     "tracking-code": "Tracking-Code",
     "transfer": "Übertragen",
-    "transfers": "t",
+    "transfers": "Überweisungen",
     "transfers-stock": "Transfers stock",
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
@@ -1593,7 +1593,7 @@
     "updater": "Updater",
     "updates-available": "Verfügbare Updates",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Aktualisierung der Zähler für angehängte Dateien",
     "upload-file": "Datei hochladen",
     "uploaded-at": "geladen am",
     "url": "Webseite",
@@ -1676,7 +1676,7 @@
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Enviaste una imagen",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-video": "Sie haben ein Video gesendet",
     "you-should-change-passwd": "Sie sollten Ihr Password ändern",
     "your": "Ihr",
     "zip-code": "Postleitzahl",
