--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -154,7 +154,7 @@
     "banking-movements": "Movementos bancarios",
     "barcode": "Código de barras",
     "bcc": "BCC",
-    "become-sponsor": "Fai-te patrocinador",
+    "become-sponsor": "Faite patrocinador",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
@@ -1142,7 +1142,7 @@
     "php-extension-not-found": "Non tes a extensión %extension% de PHP instalada.",
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
     "physical-stock": "Accións físicas",
-    "picking": "Picking",
+    "picking": "Recollida",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduza un valor",
     "plugin": "Plugin",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Devolución do recibo %document%",
     "refunds": "Devolucións",
     "register": "Rexistrar",
-    "register-install-ad": "Registra a instalación de FacturaScripts",
+    "register-install-ad": "Rexistra a instalación de FacturaScripts",
     "register-install-ad-p": "Se rexistras a instalación de FacturaScripts obterás 1 mes de patrocinio PRO, que che permite descargar un dos nosos plugins exclusivos. Ademais, axúdanos a obter estatísticas de versións do core e de PHP.",
     "register-installation": "Rexistrar instalación",
     "register-installation-p": "Rexistre a súa instalación para poder actualizar plugins de pago ou privados",
