--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -198,7 +198,7 @@
     "cant-delete-default-country": "Impossibile eliminare il paese predefinito",
     "cant-delete-default-currency": "non è possibile eliminare la valuta predefinita",
     "cant-delete-default-payment-method": "non è possibile eliminare il metodo di pagamento predefinito",
-    "cant-delete-default-serie": "cant-delete-default-serie",
+    "cant-delete-default-serie": "Non è possibile eliminare la serie predefinita",
     "cant-delete-default-tax": "Impossibile eliminare la tassa predefinita",
     "cant-delete-default-warehouse": "Non è possibile eliminare il magazzino predefinito",
     "cant-delete-last-user": "Impossibile eliminare l'ultimo utente",
@@ -216,7 +216,7 @@
     "categories": "Categorie",
     "category": "Categoria",
     "cc": "CC",
-    "center": "Center",
+    "center": "Centro",
     "change": "cambiamento",
     "channel": "canale",
     "charge-date": "Data del addebito",
@@ -286,10 +286,10 @@
     "compared": "comparato",
     "compatible": "Compatibile",
     "completed": "completato",
-    "component": "Component",
+    "component": "Componente",
     "concept": "Concetto",
     "conditions": "Condizioni",
-    "configure-columns": "Column Configurator",
+    "configure-columns": "Configuratore colonne",
     "confirm": "Confermare",
     "confirm-delete": "Conferma cancellazione?",
     "connect": "Connettere",
@@ -357,7 +357,7 @@
     "customer-groups": "Gruppi di clienti",
     "customer-invoice": "Fattura cliente",
     "customer-invoice-deleted-successfully": "Fattura di vendita 0 cancellata con successo.",
-    "customer-invoices": "Customer invoices",
+    "customer-invoices": "Fatture dei clienti",
     "customer-not-found": "Cliente non trovato",
     "customer-order": "Ordine del cliente",
     "customer-orders": "Ordini del cliente",
@@ -385,7 +385,7 @@
     "date-out": "Data di uscita",
     "date-out-of-exercise-range": "Data dall'intervallo di eccitazione 0",
     "date-wildcard-info": "Data attuale (data del computer)",
-    "dateentry-wildcard-info": "dateentry-wildcard-info",
+    "dateentry-wildcard-info": "Data indicata nell'intestazione della scrittura contabile",
     "day": "giorno",
     "days": "giorni",
     "days-log-retention": "giorni di conservazione log",
@@ -587,7 +587,7 @@
     "exit": "uscita",
     "expedient": "pratica",
     "expense-subaccount": "Sottoconto per spese bancarie",
-    "expenses": "expenses",
+    "expenses": "Spese",
     "expiration": "Scadenza",
     "expiration-type": "expiration-type",
     "expired": "scaduto",
@@ -624,7 +624,7 @@
     "finalize": "finalize",
     "find-problems": "Trova problemi",
     "finished": "Completato",
-    "finished-cron": "Finished FacturaScripts cron execution, needed time: %timeNeeded%",
+    "finished-cron": "Esecuzione del cron di FacturaScripts terminata, tempo necessario: %timeNeeded% secondi",
     "first-quarter": "Primo trimestre",
     "first-steps": "primi passi",
     "first-trimester": "Primo trimestre",
@@ -701,7 +701,7 @@
     "group-by-day-unixtime": "group-by-day-unixtime",
     "group-by-month": "Raggruppa per mese",
     "group-by-month-unixtime": "Raggruppa per mese (unixtime)",
-    "group-by-subaccount": "Agrupar por subcuenta",
+    "group-by-subaccount": "Raggruppa per sottoconto",
     "group-by-week": "raggruppa-per-settimana",
     "group-by-week-unixtime": "Raggruppa per settimana unixtime",
     "group-by-year": "Raggruppa per anno",
@@ -859,14 +859,14 @@
     "last-purchase-price": "ultimo prezzo d'acquisto",
     "last-quarter": "ultimo-quartiere",
     "last-semester": "Ultimo semestre",
-    "last-trimester": "Ultimo trimestre",
+    "last-trimester": "L'ultimo trimestre",
     "last-update": "last-update",
     "last-user": "Ultimo utente",
     "last-week": "La settimana scorsa",
     "last-year": "L'anno scorso",
     "latitude": "Latitudine",
     "latitude-abb": "Lat",
-    "ledger": "Ledger",
+    "ledger": "Diario",
     "left": "Sinistra",
     "level": "Livello",
     "level-benefit-sales": "Nivel para ver beneficios",
@@ -937,7 +937,7 @@
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Scorte massime",
     "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "mega-search": "MegaRicerca",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache cancellato.",
     "memcache-delete-key-item": "Elemento cancellato '0' da Memcache.",
@@ -960,7 +960,7 @@
     "missing-data-epigraph-group": "Dati mancanti nell'epigrafe di gruppo.",
     "missing-data-subaccount": "Dati mancano dal subaccount.",
     "missing-epigraph-data": "I dati mancano dall'epigrafe.",
-    "missing-file": "Missing file",
+    "missing-file": "File mancante",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "Mobile",
     "model": "Modello",
@@ -974,7 +974,7 @@
     "month-2": "Febbraio",
     "month-3": "Marzo",
     "month-4": "Abril",
-    "month-5": "Mayo",
+    "month-5": "Maggio",
     "month-6": "Giugno",
     "month-7": "Luglio",
     "month-8": "Agosto",
@@ -1021,14 +1021,14 @@
     "no-outstanding-amount": "nessuna somma in sospeso",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Sin referencia",
-    "no-selected-item": "no-selected-item",
+    "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
     "none": "Nessuno",
     "normal": "normale",
-    "not-allowed-delete": "not-allowed-delete",
+    "not-allowed-delete": "Non hai il permesso di eliminare",
     "not-allowed-modify": "Non si è autorizzati a modificare",
     "not-enough-stock": "Non abbastanza stock di %reference%",
     "not-passed-integrity-check": "Alcuni file non hanno superato il controllo di integrità...<br\/>Puoi <a class='alert-link' target='_blank' href='IntegritySystemCheck'>ottenere ulteriori dettagli qui<\/a>.",
@@ -1101,15 +1101,15 @@
     "parent-account": "Account Padre",
     "parent-family-cant-be-child": "La famiglia madre non può essere la stessa del bambino.",
     "parent-group": "gruppo genitore",
-    "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
+    "parent-group-cant-be-the-same-group": "Il gruppo padre non può essere lo stesso gruppo",
     "parent-group-loop": "Il gruppo genitore %parentGroup% sta causando una relazione circolare.",
     "partnumber": "Numero di parte",
     "passenger": "Passeggero",
     "password": "Contraseña",
-    "pattern": "pattern",
+    "pattern": "Pattern",
     "pattern-without-number": "Il pattern selezionato non include un numero, quindi è molto probabile che generi codici duplicati.",
-    "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
-    "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
+    "pattern-without-serie": "Il modello scelto non include serie, quindi potrebbe generare codici duplicati per ogni serie",
+    "pattern-without-year": "Il modello scelto non include esercizio o data, quindi potrebbe generare codici duplicati in ogni esercizio",
     "pay": "Paga",
     "pay-with-card": "Paga con Carta di Credito",
     "payment": "Pagamento",
@@ -1219,7 +1219,7 @@
     "purchases-subaccount-not-found": "Conto acquisti non trovato",
     "pvp": "Prezzo al dettaglio",
     "pvp-total": "Prezzo totale",
-    "pvp-unit": "Unit retail price",
+    "pvp-unit": "Prezzo al dettaglio unitario",
     "pvpsindto-line-error": "Errore nel valore di pvpsindto della riga 0 del documento. Valore corretto: 1",
     "pvptotal-line-error": "Errore nel valore pvptotal della riga 0 del documento. Valore corretto: 1",
     "quantity": "Quantità",
@@ -1228,7 +1228,7 @@
     "quantity-served": "quantity-served",
     "quantity-sold": "quantità venduta",
     "randomizer-generating-more-items": "Generando più elementi...",
-    "rate": "rate",
+    "rate": "Tariffa",
     "rates": "Aliquote",
     "re": "RE",
     "re-open": "Riaprire",
@@ -1247,13 +1247,13 @@
     "record-not-found": "Record non trovato",
     "record-save-error": "Si è verificato un errore durante il salvataggio del record",
     "record-updated-correctly": "Registro aggiornato correttamente!",
-    "recreate-system-integrity": "Recreate system integrity",
+    "recreate-system-integrity": "Ricreare l'integrità del sistema",
     "rectified-invoice": "Fattura rettificativa",
     "rectified-invoice-p": "Le fatture sono documenti commerciali e hanno una serie di restrizioni legali. Non possono essere eliminate o modificate. Sono ammesse solo restituzioni totali o parziali. Utilizzare questo modulo per eseguire un reso su questa fattura.",
     "rectified-invoices": "Fatture correttive",
     "rectifying": "Rectificativa",
     "rectifying-serie": "serie correttiva",
-    "redirect": "Redirección",
+    "redirect": "Reindirizzamento",
     "reference": "Riferimento",
     "reference+description": "Riferimento + Descrizione",
     "refresh": "ricaricare",
@@ -1263,14 +1263,14 @@
     "refunds": "Rimborsi",
     "register": "registrare",
     "register-install-ad": "Registra l'installazione di FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Se registri l'installazione di FacturaScripts otterrai 1 mese di sponsorizzazione PRO, che ti consente di scaricare uno dei nostri plugin esclusivi. Inoltre ci aiuta a ottenere statistiche sulle versioni del core e di PHP.",
     "register-installation": "Registra installazione",
     "register-installation-p": "Registra la tua installazione per poter aggiornare i plugin di pagamento o privati.",
     "register-symbol": "#",
     "registered-installation": "Installazione registrata #%number%",
     "registered-installation-p": "Questa installazione è già stata registrata. Se hai plugin a pagamento, premi il pulsante di gestione per collegarli e poterli aggiornare.",
     "regularization-operation": "Operazione di regolarizzazione",
-    "reject": "Rechazar",
+    "reject": "Rifiuta",
     "rejected": "rifiutato",
     "related": "relazionato",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
@@ -1368,7 +1368,7 @@
     "server": "Server",
     "service": "service",
     "services": "servizi",
-    "settings": "Ajustes",
+    "settings": "Impostazioni",
     "settlement": "Liquidazione",
     "settlement-product": "Prodotto di liquidazione",
     "settlements": "regolamenti",
@@ -1384,7 +1384,7 @@
     "show-crm-warnings": "Mostra avvisi CRM",
     "show-expired-receipts": "Mostra ricevute scadute",
     "show-month-stats": "Mostra statistiche mensili",
-    "show-pending-remittances": "Mostrar remesas pendientes",
+    "show-pending-remittances": "Mostra rimessa in attesa",
     "show-price": "Mostra prezzo su stampa",
     "show-quantity": "Mostra la quantità sulla stampa",
     "show-section-new": "Mostra sezione creazione",
@@ -1398,7 +1398,7 @@
     "smaller-than": "Più piccolo di",
     "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
     "social-security-number": "Social Security number",
-    "sort": "Order",
+    "sort": "Ordinare",
     "sort-by-column": "Ordina per colonna",
     "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordina per data decrescente",
@@ -1430,7 +1430,7 @@
     "stock-transfers": "trasferimenti di magazzino",
     "stockmax": "Magazzino max",
     "stockmin": "Scorte min.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Limite di archiviazione quasi raggiunto (%limit%). Restano %free%",
     "storage-limit-reached": "storage-limit-reached",
     "stripe": "Stripe",
     "structured-data-csv": "File CSV",
@@ -1456,14 +1456,14 @@
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
     "summary": "Sommario",
     "sums-and-balances": "Sommare e bilanciare",
-    "sunday": "sunday",
+    "sunday": "Domenica",
     "supplied": "fornito",
     "supplied-amount": "Fornimenti",
     "supplied-subaccount-not-found": "Subcuenta non trovata",
     "supplier": "Fornitore",
     "supplier-account-not-found": "conto fornitore non trovato",
-    "supplier-code": "supplier-code",
-    "supplier-delivery-note": "Supplier delivery note",
+    "supplier-code": "Codice fornitore",
+    "supplier-delivery-note": "Dichiarazione di consegna fornitore",
     "supplier-delivery-notes": "Note di consegna fornitore",
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Stime dei fornitori",
@@ -1539,11 +1539,11 @@
     "today": "Oggi",
     "total": "Totale",
     "total-amount": "somma totale",
-    "total-cost": "total-cost",
+    "total-cost": "Costo totale",
     "total-purchases": "Acquisti totali",
     "total-sales": "Vendite totali",
     "total-value-error": "Quantità totale di 0 1 non corretta (2). Importo corretto: 3",
-    "total-with-taxes": "Total with taxes",
+    "total-with-taxes": "Totale + tasse",
     "totalirpf-value-error": "Quantità totale IRPF pari a 0 1 non corretta (2). Importo corretto: 3",
     "totaliva-value-error": "Importo totale della tassa pari a 0 1 non corretto (2). Importo corretto: 3",
     "totallinea-value-error": "Errore nel valore totallinea della riga IVA dell'imposta 0 della fattura. Valore corretto: 1",
@@ -1556,7 +1556,7 @@
     "translation": "Traduzione",
     "translations": "Traduzioni",
     "travel": "Viaggio",
-    "try-again-later": "try-again-later",
+    "try-again-later": "Riprova più tardi",
     "tuesday": "Martedì",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
@@ -1573,7 +1573,7 @@
     "unchecked": "Non verificato",
     "under-minimums": "under-minimums",
     "undo": "Disfare",
-    "unit-profit": "unit-profit",
+    "unit-profit": "Profitto unit.",
     "unit-purchase-price": "Prezzo unitario di acquisto.",
     "unit-sale-price": "prezzo di vendita unitario",
     "unlimited": "Illimitato",
