--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -145,7 +145,7 @@
     "balance-account-abreviated": "Conta de saldo abreviada",
     "balance-amounts": "Balanço de Saldos e Saldos",
     "balance-sheet": "Balanço Patrimonial",
-    "balance-sheets": "Balance Sheets",
+    "balance-sheets": "Balanços",
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
     "bank-accounts": "contas bancárias",
@@ -178,14 +178,14 @@
     "calculated-tax-diff": "Diferença encontrada ao calcular o total do IVA. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendário",
-    "can-not-open-zip-file": "Não é possível abrir o arquivo zip '0'",
+    "can-not-open-zip-file": "Não é possível abrir o arquivo zip '%zipFile%'",
     "cancel": "Cancelar",
     "cancel-data": "Cancelar alterações ou operação",
     "cancelled": "cancelado",
     "cannot-generate-accounting-entry": "Erro ao gerar o lançamento contábil da fatura %invoice%",
     "cant-assign-date-already-regularized": "Não é possível atribuir a data %date% pois já existe uma regularização de %tax% para esse período.",
     "cant-assing-subaccount-supplier": "Impossível associar a subconta ao fornecedor %supplierCode%",
-    "cant-associate-customer-subaccount": "Não é possível associar a subconta do cliente 0",
+    "cant-associate-customer-subaccount": "Não é possível associar a subconta para o cliente %customerCode%",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree uno nuevo.",
     "cant-change-agent-in-settlement": "No se puede cambiar el agente en el asentamiento",
     "cant-connect-database": "Não foi possível conectar ao banco de dados!",
@@ -271,7 +271,7 @@
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
     "commission": "commission",
-    "commission-general-info": "commission-general-info",
+    "commission-general-info": "Relação de porcentagens de comissão que se aplicam na venda de produtos. O percentual mais restritivo ou específico será aplicado.",
     "commission-settlement": "Liquidação de comissões %code%",
     "commissions": "Comissões",
     "common-data": "Dados comuns",
@@ -345,7 +345,7 @@
     "current-quarter": "Trimestre actual",
     "current-risk": "Risco atual",
     "customer": "Cliente",
-    "customer-account-not-found": "customer-account-not-found",
+    "customer-account-not-found": "Conta do cliente não encontrada",
     "customer-banking-accounts": "Contas bancárias",
     "customer-code": "Código Cliente",
     "customer-commission-info": "Informações sobre comissão do cliente",
@@ -374,7 +374,7 @@
     "dashboard-backup": "Cópia de segurança",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Dashboard da %company%",
-    "data-source": "Origin data",
+    "data-source": "Dados de origem",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
@@ -453,7 +453,7 @@
     "detail": "Detalhe",
     "details": "Detalhes",
     "difference": "diferença",
-    "different-passwords": "As senhas não correspondem a 0",
+    "different-passwords": "As senhas não correspondem para o usuário %userNick%",
     "different-than": "Diferente de",
     "disable": "Desativar",
     "disable-plugins": "Desativar plugins",
@@ -487,9 +487,9 @@
     "dont-sell-below-cost": "Não venda abaixo do custo",
     "download": "Baixar",
     "download-completed": "Download completado",
-    "download-error": "Error al descargar. Código %status% - %error%",
+    "download-error": "Erro ao baixar. Código %status% - %error% %body%",
     "download-xml": "Baixar XML",
-    "downloads": "downloads",
+    "downloads": "Downloads",
     "drag": "Arrastar",
     "dto": "Disco.",
     "dto-2": "Dto. 2",
@@ -613,7 +613,7 @@
     "file-size-error": "Erro ao enviar o arquivo %fileName% pois excede o tamanho máximo permitido de %maxSize% MB",
     "file-type-error": "Erro ao enviar o arquivo do tipo%typeFile%. Os tipos suportados são: áudio, documento, imagem e vídeo.",
     "file-yet-exists": "O ficheiro já existe: %filePath%",
-    "filecache-clear": "Filecache desmarcada.",
+    "filecache-clear": "Cache de arquivos limpa.",
     "filecache-delete-key-item": "Elemento '%item%' excluído do Filecache.",
     "filecache-get-key-item": "Obtido elemento '0' do Filecache.",
     "filecache-set-key-item": "Elemento configurado '0' para Filecache.",
@@ -632,7 +632,7 @@
     "fiscal-exercise": "Exercício fiscal",
     "fiscal-id": "Id. Fiscal",
     "fiscal-number": "fiscal-number",
-    "fixed-value": "fixed-value",
+    "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Não é possível escrever na pasta FacturaScripts.",
     "font": "Fonte",
@@ -672,7 +672,7 @@
     "generate-settlements": "generate-settlements",
     "generate-test-data": "Gerar dados de teste",
     "generate-title": "Criar Relatório",
-    "generated-accounting-entries": "0 entradas contábeis geradas.",
+    "generated-accounting-entries": "%quantity% lançamentos contábeis gerados.",
     "generated-accounts": "%quantity% contas contábeis geradas.",
     "generated-agents": "0 agentes gerados.",
     "generated-at": "Gerado em %when%",
@@ -691,12 +691,12 @@
     "generated-supplier-delivery-notes": "%quantity% notas de entrega do fornecedor geradas.",
     "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
     "generated-supplier-orders": "%quantity% pedidos de fornecedores gerados.",
-    "global-dto": "global-dto",
+    "global-dto": "Dto. global",
     "global-dto-2": "Dto global 2",
     "greater-than": "Maior que",
     "grid-help": "Control + Enter para quebra de linha. Você pode mover ou excluir as linhas clicando no número da linha.",
     "group": "Grupo",
-    "group-accounts": "group-accounts",
+    "group-accounts": "Agrupar contas",
     "group-by-day": "Agrupar por dia",
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
@@ -704,7 +704,7 @@
     "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "Agrupar por semana",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
-    "group-by-year": "group-by-year",
+    "group-by-year": "Agrupar por ano",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "Agrupar com mais documentos deste cliente\/fornecedor",
     "group-name": "Nome do Grupo",
@@ -721,7 +721,7 @@
     "health": "Saúde",
     "height": "Altura",
     "hello": "Olá",
-    "help": "Socorro",
+    "help": "Ajuda",
     "help-button-p": "Consulte a ajuda em cada tela",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
     "hide": "ocultar",
@@ -750,11 +750,11 @@
     "import": "Importar",
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contábil padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
-    "import-file": "Fichero de importación",
+    "import-file": "Arquivo de importação",
     "in-progress": "Em andamento",
     "in-stock": "Em estoque",
     "inactive": "Inativo",
-    "income-and-expenses": "Income and Expenses",
+    "income-and-expenses": "Receitas e Despesas",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
@@ -867,7 +867,7 @@
     "latitude": "Latitude",
     "latitude-abb": "Lat",
     "ledger": "Diário",
-    "left": "Left",
+    "left": "Esquerda",
     "level": "Nível",
     "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para visualizar custos",
@@ -894,7 +894,7 @@
     "locked": "Bloqueado",
     "log": "Log",
     "login": "Entrar",
-    "login-cookie-fail": "O cookie da sessão falhou",
+    "login-cookie-fail": "Cookie de sessão inválido: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
     "login-ok": "Login bem-sucedido (cookie). Usuário: '%nick%'",
     "login-password-fail": "Usuário ou senha incorretos",
@@ -904,7 +904,7 @@
     "login-user-not-found": "Usuário não encontrado: %nick%",
     "logo": "logotipo",
     "logout": "Sair",
-    "logout-ok": "Sair com sucesso.",
+    "logout-ok": "Sessão encerrada com sucesso.",
     "logs": "Logs",
     "long": "Longo",
     "longitude": "Longitude",
@@ -957,7 +957,7 @@
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutos",
     "mismatched-accounting-entry": "Lançamento contábil incorreto",
-    "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
+    "missing-data-epigraph-group": "Faltando dados no grupo de epígrafes.",
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Dados em epígrafe faltando.",
     "missing-file": "Falta o arquivo",
@@ -1009,7 +1009,7 @@
     "new-price": "Novo preço",
     "new-refund": "Nova Devolução",
     "new-supplier": "Novo Fornecedor",
-    "news": "Notícia",
+    "news": "Notícias",
     "next": "Próximo",
     "nick": "usuario",
     "no": "Não",
@@ -1022,7 +1022,7 @@
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
-    "no-stock": "Sem estoque",
+    "no-stock": "Sem controle de estoque",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
@@ -1046,7 +1046,7 @@
     "notifications": "Notificações",
     "november": "Novembro",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Nº de anexos",
     "number-length": "Comprimento do número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
@@ -1146,9 +1146,9 @@
     "plan": "Plano",
     "please-enter-value": "Por favor, insira um valor",
     "plugin": "Plugin",
-    "plugin-deleted": "O plugin 0 foi excluído com sucesso.",
+    "plugin-deleted": "O plugin %pluginName% foi excluído com sucesso.",
     "plugin-disabled": "O Plugin %pluginName% foi desativado com sucesso.",
-    "plugin-enabled": "Plugin ativado com sucesso.",
+    "plugin-enabled": "O Plugin %pluginName% foi ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin '%pluginName%' instalado",
@@ -1183,7 +1183,7 @@
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
     "price-with-tax": "preço-com-imposto",
-    "principal": "a Principal",
+    "principal": "Principal",
     "print": "Imprimir",
     "print-bank-data": "Imprimir dados bancários",
     "print-data-records": "Imprimir todos os registros",
@@ -1231,9 +1231,9 @@
     "rate": "rate",
     "rates": "Preços",
     "re": "RE",
-    "re-open": "re-open",
+    "re-open": "Reabrir",
     "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Ler mais",
     "readonly": "Somente leitura",
     "rebuild": "Reconstruir",
@@ -1255,7 +1255,7 @@
     "rectifying-serie": "Série retificativa",
     "redirect": "Redirecionamento",
     "reference": "Referência",
-    "reference+description": "Reference + Description",
+    "reference+description": "Referência + Descrição",
     "refresh": "Atualizar",
     "refresh-page": "Atualizar página",
     "refund-amount": "Valor reembolsado",
@@ -1278,7 +1278,7 @@
     "reloading": "reloading",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "Remover da lista",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Removendo logs até %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Lançamentos",
@@ -1315,7 +1315,7 @@
     "roles": "Funções",
     "rules": "Regras",
     "run": "executar",
-    "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
+    "running-plugin-cron": "Executando o cron do plugin %pluginName%",
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
@@ -1376,24 +1376,24 @@
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
     "shop": "Loja",
-    "shops": "Tiendas",
+    "shops": "Lojas",
     "short": "Curto",
     "short-name": "Nome curto",
     "show": "Mostrar",
-    "show-balance-graphic": "show-balance-graphic",
+    "show-balance-graphic": "Mostrar gráficos em lançamentos",
     "show-crm-warnings": "Mostrar avisos CRM",
-    "show-expired-receipts": "Mostrar recibos vencidos",
+    "show-expired-receipts": "Mostrar recibos expirados",
     "show-month-stats": "Mostrar estatísticas mensais",
     "show-pending-remittances": "Mostrar remessas pendentes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar seção nova",
-    "signature": "Signature",
+    "signature": "Assinatura",
     "simple": "Simples",
     "simplified": "Simplificado",
     "size": "size",
     "sketch": "Boceto",
-    "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
+    "sketch-invoice-warning": "Esta fatura ainda é um esboço. Torná-la oficial alterando seu status para emitida.",
     "small": "Pequeno",
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
@@ -1471,7 +1471,7 @@
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Fatura de compra %docCode% excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
-    "supplier-not-found": "supplier-not-found",
+    "supplier-not-found": "Fornecedor não encontrado",
     "supplier-order": "Pedido de fornecedor",
     "supplier-orders": "Ordens de fornecedor",
     "supplier-payment-concept": "b",
@@ -1519,7 +1519,7 @@
     "third-trimester": "Terceiro Trimestre",
     "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "Este último mês",
-    "this-last-week": "A última semana",
+    "this-last-week": "Últimos 7 dias",
     "this-last-year": "Os últimos 365 dias",
     "this-month": "Este mês",
     "this-week": "Esta semana",
@@ -1559,7 +1559,7 @@
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "type": "Tipo",
-    "type-alert": "Type alert",
+    "type-alert": "Tipo de alerta",
     "type-critical": "Type critical",
     "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
@@ -1578,21 +1578,21 @@
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
-    "unlink-file": "unlink-file",
+    "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalação excluída do registro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
     "until-accounting-entry": "Até entrada contábil",
     "until-date": "Até a data",
     "until-subaccount": "até a subconta",
-    "update": "update",
+    "update": "Atualizar",
     "update-stock": "Atualizar estoque",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
     "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available-p": "Há atualizações disponíveis do FacturaScripts. Por favor, clique no atualizador e baixe a nova versão. As atualizações corrigem falhas e adicionam novas funcionalidades.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
@@ -1628,7 +1628,7 @@
     "verified": "verificado",
     "version": "Versão",
     "video": "Vídeo",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "vies-check-success": "O número '%vat-number%' está registrado no sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver coluna subtotal ou líquido",
     "view-estimation": "Ver orçamento",
@@ -1656,13 +1656,13 @@
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
     "wizard": "Assistente",
-    "wizard-p": "wizard-p",
+    "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
     "write-a-message-here": "Escribe un mensaje aquí",
-    "x-column": "x-column",
+    "x-column": "Coluna X",
     "x-operation": "Operação sobre X",
     "y-column": "Coluna Y",
     "year": "Ano",
