--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -100,7 +100,7 @@
     "apc-get-key-item": "Obter o elemento '0' da APC.",
     "apc-set-key-item": "Elemento configurado '0' para APC.",
     "api": "API",
-    "api-disabled": "API desativada",
+    "api-disabled": "API desativada. Pode ativá-la a partir do painel de controle.",
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versão da API não encontrada",
@@ -257,9 +257,9 @@
     "codiso": "Código ISO",
     "color": "cor",
     "color-danger": "Cor perigo",
-    "color-dark": "Color oscuridad",
+    "color-dark": "Cor da escuridão",
     "color-info": "Color info",
-    "color-light": "Color luz",
+    "color-light": "Cor da luz",
     "color-primary": "Color primário",
     "color-secondary": "Cor secundária",
     "color-success": "Color éxito",
@@ -322,7 +322,7 @@
     "cost": "Custo",
     "cost-price": "Preço de custo",
     "cost-price-policy": "Política de preço de custo",
-    "counterpart": "Offsetting",
+    "counterpart": "Contrapartida",
     "countries": "Países",
     "country": "País",
     "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
@@ -343,7 +343,7 @@
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre actual",
-    "current-risk": "current-risk",
+    "current-risk": "Risco atual",
     "customer": "Cliente",
     "customer-account-not-found": "customer-account-not-found",
     "customer-banking-accounts": "Contas bancárias",
@@ -374,7 +374,7 @@
     "dashboard-backup": "Cópia de segurança",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Dashboard da %company%",
-    "data-source": "Origin data",
+    "data-source": "Dados de origem",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
@@ -426,7 +426,7 @@
     "delivery-notes": "Notas de entrega",
     "delivery-notes-button": "Notas de Entrega pendentes:",
     "department": "d",
-    "departments": "departments",
+    "departments": "Departamentos",
     "desc": "Descrição",
     "desc-alfa-code-2": "Identificação oficial para o nome dos países e outras unidades administrativas",
     "desc-alfa-code-3": "Identificação oficial para o nome dos países e outras unidades administrativas",
@@ -594,7 +594,7 @@
     "expired-receipt": "R",
     "export": "exportar",
     "export-bill": "Fatura de exportação",
-    "extra-file": "Extra file",
+    "extra-file": "Arquivo extra",
     "failed": "Falhado",
     "families": "Famílias",
     "family": "Família",
@@ -621,7 +621,7 @@
     "filter-method": "Método de filtragem",
     "filter-records-containing-indicated-value": "Filtrar registros contendo o valor indicado",
     "filters": "Filtros",
-    "finalize": "finalize",
+    "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
     "finished-cron": "Terminou a execução do cron do FacturaScripts, tempo decorrido: %timeNeeded%",
@@ -632,7 +632,7 @@
     "fiscal-exercise": "Exercício fiscal",
     "fiscal-id": "Id.",
     "fiscal-number": "fiscal-number",
-    "fixed-value": "fixed-value",
+    "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
     "font": "Fonte",
@@ -653,7 +653,7 @@
     "fourth-trimester": "Quarto Trimestre",
     "free": "free",
     "friday": "sexta-feira",
-    "from": "from",
+    "from": "De",
     "from-accounting-entry": "De lançamento",
     "from-date": "da data",
     "from-subaccount": "De subconta",
@@ -691,10 +691,10 @@
     "generated-supplier-delivery-notes": "0 notas de entrega do fornecedor geradas.",
     "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
     "generated-supplier-orders": "0 pedidos de fornecedores gerados.",
-    "global-dto": "global-dto",
+    "global-dto": "Dto. global",
     "global-dto-2": "global-dto-2",
     "greater-than": "Melhor que",
-    "grid-help": "grid-help",
+    "grid-help": "Control + Enter para quebra de linha. Pode mover ou eliminar as linhas clicando no número da linha.",
     "group": "Grupo",
     "group-accounts": "group-accounts",
     "group-by-day": "Agrupar por dia",
@@ -704,7 +704,7 @@
     "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "group-by-week",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
-    "group-by-year": "group-by-year",
+    "group-by-year": "Agrupar por ano",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "Agrupar com mais documentos deste cliente\/fornecedor",
     "group-name": "Nome do Grupo",
@@ -747,14 +747,14 @@
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subconta de imposto exigido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
-    "import": "import",
+    "import": "Importar",
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contabilístico padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
     "import-file": "Fichero de importación",
     "in-progress": "Em andamento",
     "in-stock": "in-stock",
     "inactive": "Inativo",
-    "income-and-expenses": "Income and Expenses",
+    "income-and-expenses": "Receitas e Despesas",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
@@ -786,7 +786,7 @@
     "invoice": "Fatura",
     "invoice-email-subject": "A sua fatura %code%",
     "invoice-email-text": "Olá, vai anexa a sua fatura %code%",
-    "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
+    "invoice-has-no-receipts": "A fatura não tem recibos. Crie um a partir da aba recibos.",
     "invoice-have-rectifying-cant-delete": "A factura já possui uma retificação. Não pode ser excluído.",
     "invoice-new-assigned-date": "Há invocados com maior data (0). Nova data atribuída: 1",
     "invoice-number": "Número da factura",
@@ -867,8 +867,8 @@
     "latitude": "Latitude",
     "latitude-abb": "Lat",
     "ledger": "Razão",
-    "left": "Left",
-    "level": "Level",
+    "left": "Esquerda",
+    "level": "Nível",
     "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para ver custos",
     "level1": "Level 1",
@@ -914,7 +914,7 @@
     "low-security": "Baixa Segurança",
     "machine": "machine",
     "machines": "máquinas",
-    "macro-account-note-info": "Keys for values replacement macro",
+    "macro-account-note-info": "Códigos para substituição por valores",
     "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "Erro no teste de email",
     "mail-test-ok": "Prova de email satisfatória",
@@ -926,7 +926,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
-    "march": "Marzo",
+    "march": "Março",
     "margin": "m",
     "margin-top": "Topo da margem",
     "mark-as-homepage": "Marque como página inicial",
@@ -1006,7 +1006,7 @@
     "new-customers": "Novos Clientes",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nova senha",
-    "new-price": "new-price",
+    "new-price": "Novo preço",
     "new-refund": "Nova Devolução",
     "new-supplier": "Novo Fornecedor",
     "news": "Notícia",
@@ -1019,7 +1019,7 @@
     "no-gaps-found": "N",
     "no-invoice": "Sem fatura",
     "no-outstanding-amount": "no-outstanding-amount",
-    "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
@@ -1126,7 +1126,7 @@
     "pending": "pending",
     "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "Ordens Ptes:",
-    "pending-reception": "Pending reception",
+    "pending-reception": "Recepção pendente",
     "percentage": "Percentagem",
     "percentage-commission": "% Comissão",
     "percentage-discount": "p",
@@ -1158,7 +1158,7 @@
     "plugin-needs-fs-version": "p",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
     "plugin-order": "O",
-    "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
+    "plugin-phpversion-error": "O plugin %pluginName% requer PHP %php% ou superior",
     "plugin-removal-disabled": "A remoção de plugins está desativada neste servidor",
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "a",
@@ -1182,7 +1182,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
-    "price-with-tax": "price-with-tax",
+    "price-with-tax": "Preço + impostos",
     "principal": "a Principal",
     "print": "Impressão",
     "print-bank-data": "Imprimir cuenta bancaria",
@@ -1224,16 +1224,16 @@
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
     "quantity": "Quantidade",
     "quantity-abb": "Quantidade-abrev",
-    "quantity-remaining": "Cantidad restante",
+    "quantity-remaining": "Quantidade restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
     "rate": "rate",
     "rates": "Preços",
     "re": "RE",
-    "re-open": "re-open",
+    "re-open": "Reabrir",
     "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Leer más",
     "readonly": "readonly",
     "rebuild": "rebuild",
@@ -1313,9 +1313,9 @@
     "rol": "Grupo",
     "role": "Role",
     "roles": "Roles",
-    "rules": "Rules",
+    "rules": "Regras",
     "run": "executar",
-    "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
+    "running-plugin-cron": "Executando o cron do plugin %pluginName%",
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
@@ -1332,7 +1332,7 @@
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
-    "select": "select",
+    "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-none": "select-none",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
@@ -1380,15 +1380,15 @@
     "short": "Curto",
     "short-name": "Nome curto",
     "show": "Mostrar",
-    "show-balance-graphic": "show-balance-graphic",
+    "show-balance-graphic": "Mostrar gráficos em lançamentos",
     "show-crm-warnings": "Mostrar avisos CRM",
-    "show-expired-receipts": "Mostrar recibos vencidos",
+    "show-expired-receipts": "Mostrar recibos expirados",
     "show-month-stats": "Mostrar estadísticas mensuales",
     "show-pending-remittances": "Mostrar remessas pendentes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar seção nova",
-    "signature": "Signature",
+    "signature": "Assinatura",
     "simple": "Simples",
     "simplified": "Simplificada",
     "size": "size",
@@ -1484,7 +1484,7 @@
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
     "suspended": "Suspenso",
-    "swift": "Rápido",
+    "swift": "Swift\/BIC",
     "symbol": "Símbolo",
     "table": "table",
     "table-checked": "Tabela 0 verificada.",
@@ -1520,11 +1520,11 @@
     "this-last-fortnight": "Nesta última quinzena",
     "this-last-month": "O último mês",
     "this-last-week": "A última semana",
-    "this-last-year": "this-last-year",
+    "this-last-year": "Últimos 365 dias",
     "this-month": "Este mês",
     "this-week": "Esta semana",
     "this-year": "Este ano",
-    "thousands-separator": "Milhares",
+    "thousands-separator": "Separador de milhares",
     "thursday": "quinta-feira",
     "ticket": "Bilhete",
     "tickets": "Bilhetes",
@@ -1567,7 +1567,7 @@
     "type-info": "Informação do tipo",
     "type-notice": "Tipo aviso",
     "type-success": "Tipo correto",
-    "type-warning": "Type warning",
+    "type-warning": "Tipo de aviso",
     "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Lançamento descuadrado",
     "unchecked": "Sem checar",
@@ -1578,7 +1578,7 @@
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
-    "unlink-file": "unlink-file",
+    "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
@@ -1588,7 +1588,7 @@
     "update": "update",
     "update-stock": "Atualizar stock",
     "update-supplier-prices": "update-supplier-prices",
-    "update-time": "update-time",
+    "update-time": "Hora de atualização",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updates-available": "Actualizaciones disponibles",
@@ -1644,7 +1644,7 @@
     "wednesday": "quarta-feira",
     "weeks": "Semanas",
     "weight": "Peso",
-    "which-logs-store": "Which logs store",
+    "which-logs-store": "Quais logs armazenar",
     "width": "Largura",
     "wildcard": "Curinga",
     "wildcard-general-info": "Será substituído pelo valor correspondente",
@@ -1656,11 +1656,11 @@
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
     "wizard": "wizard",
-    "wizard-p": "wizard-p",
+    "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horario de trabajo",
-    "works": "Trabajos",
+    "works": "Trabalhos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "Operação sobre X",
