--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -921,7 +921,7 @@
     "mailer": "Controlador de correu",
     "main-address": "Direcció principal",
     "manage": "Administrar",
-    "manage-installation": "Administrar",
+    "manage-installation": "Gestionar",
     "manual": "Manual",
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
@@ -1033,7 +1033,7 @@
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
     "not-public": "No públic",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
     "not-valid-image": "No és una imatge vàlida",
@@ -1044,9 +1044,9 @@
     "notices": "Avisos",
     "notification": "Notificació",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Novembre",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Nº d'adjunts",
     "number-length": "Llongitut del número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
@@ -1263,7 +1263,7 @@
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-install-ad": "Registra la instal·lació de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Si registreu la instal·lació de FacturaScripts obtindreu 1 mes de patrocinis PRO, que us permet descarregar un dels nostres plugins exclusius. A més, ens ajuda a obtenir estadístiques de versions del core i de PHP.",
     "register-installation": "Registrar l'instalació",
     "register-installation-p": "Registreu la vostra instalació per a poder actualitzar complements de pagament o privats",
     "register-symbol": "#",
@@ -1412,7 +1412,7 @@
     "special-accounting-entries": "Assentaments especials",
     "special-accounts": "Contes especials",
     "specials-actions": "Accions especials",
-    "spreadsheet-xls": "Fitxer XLS",
+    "spreadsheet-xls": "Fitxer Excel",
     "standard": "Estàndard",
     "start": "Inicio",
     "start-date": "Data d'inici",
@@ -1591,7 +1591,7 @@
     "update-time": "Hora de l'actualització",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualitzador",
-    "updates-available": "Actualizaciones disponibles",
+    "updates-available": "Actualitzacions disponibles",
     "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Si us plau, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corregeixen errors i afegeixen noves funcions.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
